--- a/styles/belgica.css
+++ b/styles/belgica.css
@@ -233,6 +233,21 @@ p.around-2 {
   background-color: #141414;
 }
 
+/* .section3 > .row > .alpha-col, .section3 > .row > .delta-col{
+  min-height: 340px;
+} */
+
+.section3 > .row > .col-md-6 > h3 {
+  font-family: titlinglight;
+  font-size: 42px;
+  color: #ffffff;
+}
+
+.section3 > .row > .col-md-6 > p {
+  font-family: titlinglight;
+  font-size: 24px;
+}
+
 .section3 > .row{
   min-height: 340px;
   max-height: 340px;
