removing helper from html

--- a/styles/belgica.css
+++ b/styles/belgica.css
@@ -30,7 +30,7 @@ h2.helper {
   position: absolute;
   font-size: 14px;
   /* visibility: hidden; */
-  display: none;
+  /* display: none; */
 }
 
 /* banner styles */
