--- a/styles/maincss.css
+++ b/styles/maincss.css
@@ -3,8 +3,6 @@ p {
 }
 
 button {
-  /* margin-bottom: 20px;
-  margin-right: 20px; */
   background-color: #76bbf4;
   border: none;
   font-family: Roboto;
@@ -22,9 +20,9 @@ button::after {
 
 .banner {
   background-image: url("../images/banner.jpg");
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 438px;
   background-color: #031432;
 }
@@ -109,9 +107,8 @@ p.around-3 {
 .section1 {
   background-image: url("../images/section1.jpg");
   background-position: 0% 100%;
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
-  /*min-height: 450px;*/
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #013861;
 }
 
@@ -143,9 +140,9 @@ p.around-3 {
 
 .section2 {
   background-image: url("../images/section2.jpg");
-  background-position: 50% 0%; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+  background-position: 50% 0%;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 627px;
   background-color: #141414;
 }
@@ -173,7 +170,6 @@ p.around-3 {
   font-size: 48px;
   color: #76bbf4;
   text-align: center;
-  /* margin-left: 50px; */
 }
 
 .section2 > .tomo > h2.after::after {
@@ -183,9 +179,6 @@ p.around-3 {
 
   display: inline-block;
   transform: translate(0px, 6px);
-  /* width: 10px; 
-    height: 128px;
-    transform: scale(.8); */
 }
 
 .section2 > .tomo > ul.vive {
@@ -215,9 +208,9 @@ p.around-3 {
 }
 
 .section3 {
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 570px;
   background-color: #141414;
 }
@@ -242,7 +235,7 @@ p.around-3 {
 .section3 > .row > .alpha-col {
   background-image: url("../images/lareunion.jpg");
   background-position: 50% 50%;
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-repeat: no-repeat;
   border-right: 1px solid #242424;
   border-bottom: 1px solid #242424;
 }
@@ -250,14 +243,14 @@ p.around-3 {
 .section3 > .row > .beta-col {
   background-image: url("../images/dreamville.jpg");
   background-position: 50% 50%;
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-repeat: no-repeat;
   border-bottom: 1px solid #242424;
 }
 
 .section3 > .row > .gamma-col {
   background-image: url("../images/instalaciones.jpg");
   background-position: 50% 50%;
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-repeat: no-repeat;
   border-right: 1px solid #242424;
 }
 
@@ -334,12 +327,10 @@ p.around-3 {
 }
 
 .section4 {
-  /*background-image: url("../images/section4.jpg");*/
   background-color: #141414;
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
-  /* min-height: 218px; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #141414;
 }
 
